--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "service-center",
-  "version": "0.1.3",
+  "name": "ishare",
+  "version": "0.1.0",
   "author": "Vincent-zhao (zzqvincent@gmail.com)",
   "contributors": [
   ],
