--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ishare",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "author": "Vincent-zhao (zzqvincent@gmail.com)",
   "contributors": [
   ],
@@ -18,6 +18,6 @@
     "mocha"     : ">=0.9.0"
   },
   "scripts": {
-    "test": "make test"
+    "install": "make install"
   }
 }
